为登入登出设置幂等性
